# strom

./: Cargo.toml
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/src/: events.rs  lib.rs  main.rs  state.rs
backend/src/api/: flows.rs
backend/src/blocks/builtin/: audiorouter.rs  compositor.rs  loudness.rs  mod.rs  mpegtssrt.rs  mpegtssrt_input.rs  ndi.rs  whep.rs  whip.rs
backend/src/blocks/builtin/mixer/: builder.rs  definition.rs
backend/src/discovery/: device.rs
backend/src/gst/pipeline/: effects.rs
docs/: DEVELOPMENT.md  FEATURE_ROADMAP.md  FEATURE_SUGGESTIONS.md
frontend/src/: latency.rs  lib.rs  links.rs  loudness.rs  main.rs  meter.rs  properties.rs  spectrum.rs
frontend/src/api/: flows.rs
frontend/src/app/: constructors.rs  mod.rs  rendering.rs  update.rs
frontend/src/graph/: rendering.rs
types/src/: events.rs
