[workspace]
resolver = "2"
members = ["types", "backend", "frontend", "mcp-server"]
default-members = ["backend"]

[workspace.package]
version = "0.3.24"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Per Enstedt <per.enstedt@eyevinn.se>"]
repository = "https://github.com/Eyevinn/strom"
homepage = "https://github.com/Eyevinn/strom"
description = "Visual GStreamer pipeline editor and manager"

[workspace.dependencies]
# Shared types
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.21", features = ["serde", "v4", "js"] }

# Backend
axum = { version = "0.8.8", features = ["ws", "multipart"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
tokio = { version = "1.49", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
gstreamer = { version = "0.25", features = ["v1_20"] }
gstreamer-app = { version = "0.25", features = ["v1_20"] }
gstreamer-controller = { version = "0.25", features = ["v1_20"] }
gstreamer-net = { version = "0.25", features = ["v1_20"] }
gstreamer-video = { version = "0.25", features = ["v1_20"] }
gst-plugin-webrtc = { version = "0.15", features = ["whep", "whip"] }
gst-plugin-webrtchttp = { version = "0.15", default-features = false }
gst-plugin-audiofx = "0.15"
gst-plugin-inter = "0.15"
gst-plugin-rtp = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
time = { version = "0.3", features = ["formatting", "local-offset"] }
tracing-appender = "0.2.4"
utoipa = { version = "5.4", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

# Frontend
egui = "0.33"
egui-phosphor = "0.11"
eframe = { version = "0.33", features = ["default_fonts", "persistence", "glow"] }
egui_extras = { version = "0.33", features = ["image"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
gloo-net = { version = "0.6", features = ["websocket"] }
